Changes in BitBake 1.8.x:
	- Fix exit code for build failures in --continue mode
	- Fix git branch tags fetching
	- Change parseConfigurationFile so it works on real data, not a copy
	- Handle 'base' inherit and all other INHERITs from parseConfigurationFile 
	  instead of BBHandler
	- Fix getVarFlags bug in data_smart
	- Optmise cache handling by more quickly detecting an invalid cache, only 
	  saving the cache when its changed, moving the cache validity check into
	  the parsing loop and factoring some getVar calls outside a for loop
	- Cooker: Remove a debug message from the parsing loop to lower overhead
	- Convert build.py exec_task to use getVarFlags
	- Update shell to use cooker.buildFile
	- Add StampUpdate event
	- Convert -b option to use taskdata/runqueue
	- Remove digraph and switch to new stamp checking code. exec_task no longer
	  honours dependencies
	- Make fetcher timestamp updating non-fatal when permissions don't allow 
	  updates
	- Add BB_SCHEDULER variable/option ("completion" or "speed") controlling
	  the way bitbake schedules tasks
	- Add BB_STAMP_POLICY variable/option ("perfile" or "full") controlling
	  how extensively stamps are looked at for validity

Changes in BitBake 1.8.10:
	- Psyco is available only for x86 - do not use it on other architectures.
	- Fix a bug in bb.decodeurl where http://some.where.com/somefile.tgz decoded to host="" (#1530)
	- Warn about malformed PREFERRED_PROVIDERS (#1072)
	- Add support for BB_NICE_LEVEL option (#1627)
	- Sort initial providers list by default preference (#1145, #2024)
	- Improve provider sorting so prefered versions have preference over latest versions (#768)
	- Detect builds of tasks with overlapping providers and warn (will become a fatal error) (#1359)
	- Add MULTI_PROVIDER_WHITELIST variable to allow known safe multiple providers to be listed
	- Handle paths in svn fetcher module parameter
	- Support the syntax "export VARIABLE"
	- Add bzr fetcher